fixed all mentioned errors. wildcards, redundant annotations, comments and removed the unused Main from common to shared-libs